@@ -1,6 +1,7 @@
 10/08/2018
 ==========
 -Intial wave sound support for spectrum cassette (not yet working )
+-Tapectrl now works and wav loading seems to work (tested with simcity)
 
 06/08/2018
 ==========
